--- a/PAGINAS_LOJISTA/suporte.html
+++ b/PAGINAS_LOJISTA/suporte.html
@@ -73,11 +73,12 @@
 
     </div>
 
-    <!-- Caixa de envio de mensagem -->
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="Digite uma mensagem...">
-      <button class="btn btn-success"><i class="bi bi-send-fill"></i></button>
-    </div>
+   
+      <!-- Caixa de envio -->
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Digite sua mensagem...">
+        <button class="btn btn-success"><i class="bi bi-send-fill"></i></button>
+      </div>
   </main>
   <!-- ================= FIM ÁREA DO CHAT ================= -->
 
