--- a/PAGINAS_CLIENTE/telainicial.html
+++ b/PAGINAS_CLIENTE/telainicial.html
@@ -31,6 +31,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="perfil.html">Perfil</a></li>
+         <li class="nav-item"><a class="nav-link" href="suportecliente.html">Suporte</a></li>
         <li class="nav-item"><a class="nav-link active" href="carrinho.html">Carrinho</a></li>
       </ul>
     </div>
