--- a/PAGINAS_CLIENTE/cadastro.html
+++ b/PAGINAS_CLIENTE/cadastro.html
@@ -13,10 +13,12 @@
 
   <!-- Inicio do Menu Superior ----------------------------------------->
   <nav class="navbar navbar-dark bg-custom px-3">
-    <!-- Botão Voltar -->
-    <a href="login.html" class="btn btn-outline-light me-2">
-      <i class="bi bi-arrow-left"></i>
-    </a>
+  <!-- Botão Voltar apenas com seta branca -->
+  <a href="login.html" class="me-2 text-white text-decoration-none fs-4">
+    ←
+  </a>
+
+
 
     <!-- Logo Centralizada -->
     <span class="navbar-brand mx-auto">
